# Image-captioning

./: README.md  coco_dataset.py  image_captioning.py  inference.py  predict.py  pyproject.toml  requirements.txt  train.py  train_coco.py
conf/: config.yaml
conf/datamodule/: coco.yaml
conf/model/: caption.yaml
conf/optimizer/: adamw.yaml
conf/trainer/: default.yaml
src/img_cap/data/: coco_datamodule.py  coco_dataset.py
src/img_cap/models/: caption_model.py  lightning_module.py
src/img_cap/utils/: evaluation.py  transforms.py
tests/: test_smoke.py
